<resources>
    <string name="app_name">FinalProjectFirstDraft</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="submit">Submit</string>
    <string name="create_list">Create List</string>
    <string name="delete_when_checked">Delete When Checked:</string>
    <string name="checklist">Checklist</string>
    <string name="type">Type:</string>
    <string name="standard">Standard</string>
    <string name="toggle_delete">Toggle Delete</string>
    <string name="menu_toggle_delete_description">Toggles the visibility of delete icons in the list</string>
    <string name="delete">Delete</string>
    <string name="color">Color:</string>
    <string name="name">Name:</string>
    <string name="new_list">New List</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="plus">+</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_to_ares_list">Welcome to\nARES List!</string>
    <string name="please_enter_your_email_address_nand_new_password">Please enter your email address\nand new password:</string>
    <string name="add_entries">Add Entries</string>
    <string name="add_sublist">Add Sublist</string>
    <string name="settings">Settings</string>
    <string name="no_lists_created_yet_nadd_a_list_with_the_blue_button">No lists created yet\nAdd a list with the blue + button</string>
    <string name="item_text">Item Text</string>
    <string name="percent">%</string>
    <string name="unchecks_all_entries">Unchecks all Entries</string>
    <string name="uncheck_all">Uncheck All</string>
    <string name="home">Home</string>
    <string name="sample">My List</string>
    <string name="log_out">Log Out</string>
</resources>