<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <!-- Profile Image Placeholder -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="Profile Image" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="35dp"/>

    <!-- Sign In Button -->
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

    <!-- Forgot Password and Sign Up Links -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/forgot_password"
        android:textColor="@color/button_blue"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_up"
        android:textColor="@color/button_blue"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />
</LinearLayout>
