<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutNewListHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutNewListHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/color"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinnerColorPicker"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/type"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/checkListButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/checklist"
                android:textColor="@color/black"
                android:background="@drawable/background_type_button_unpressed_left"/>
            <Button
                android:id="@+id/standardButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textColor="@color/black"
                android:background="@drawable/background_type_button_unpressed_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDeleteWhenChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete_when_checked"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createListButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/confirm_button"
        android:backgroundTint="@color/blue"
        android:text="@string/create_list"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>